--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <div class="container my-3">
     <div class="row">
         <div class="col-4">
-            <h1>Log-In</h1>
+            <h1>로그인(Log-In)</h1>
         </div>
 
     </div>
