로그인 한글 추가 사용자ID를 단순하게 아이디로 단축

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
         <input type="hidden" name="next" value="{{ next }}">
 
         <div class="form-group">
-            <label for="username">사용자ID</label><br />
+            <label for="username">아이디</label><br />
             <input type="text" class="form-control" name="username" id="username"
                    value="">
         </div>
