--- a/templates/container.html
+++ b/templates/container.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Container</title>
+</head>
+<body>
+
 <div id="recommend" style="height:100px; background-color:yellow">
     <h3><a href="#">추천</a></h3>
 </div>
@@ -7,3 +15,6 @@
 <div id="check" style="height:100px; background-color:green">
     <h3><a href="#">기록보기</a></h3>
 </div>
+
+</body>
+</html>
