--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>footer</title>
+</head>
+<body>
+
 <h3>footer</h3>
+
+</body>
+</html>
