--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>recommend_container</title>
 </head>
 <body>
+<div id="reco_result" style="text-align:center;">
+    <img src="https://blog.kakaocdn.net/dn/YZiGz/btqxdqHsg3G/TmrEpyujNbbtNtOsiFpkik/img.jpg"
+         width="200px" height="200px"><br>
+    <h4></h4>
+
+</div>
+
+<div style="text-align:center;">
+    <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    border: none; cursor: pointer;" type="reset" id="reset">다시</button>
+
+    <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    border: none; cursor: pointer;" type="submit" id="submit">확인</button>
+    <br><br>
+
+    <form action="/search" method="get">
+      <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    border: none; cursor: pointer;" type="submit" id="search">검색</button>
+    </form>
+
+
+
+
+</div>
 
 </body>
 </html>
