--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 <div id="nav">{% include "navbar.html" %}</div>
-<div id="reco_header">{% include 'reco_header.html' %}</div>
-<div id="reco_container">{% include 'reco_container.html' %}</div>
+<div id="reco_header">{% include 'reco/reco_header.html' %}</div>
+<div id="reco_container">{% include 'reco/reco_container.html' %}</div>
 
 <!-- 기본 템플릿 안에 삽입될 내용 Start-->
 {% block content %}
