--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>recommend_header</title>
 </head>
 <body>
-
+<div style="text-align:center; height:100px;">
+    <h1>메뉴를 추천해 드려요~</h1>
+</div>
 </body>
 </html>
