--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,12 @@
 
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom"></nav>
+    <a class="navbar-brand"></a>
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary"
+                type="button" id="btn_search">검색
+            </button>
 <div id="nav">{% include "navbar.html" %}</div>
 <div id="header">{% include 'header.html' %}</div>
 <div id="container">{% include 'container.html' %}</div>
