--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
 <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
 <!-- Bootstrap JS -->
 <script src="{% static 'bootstrap.min.js' %}"></script>
-
+{% block script %}
+{% endblock %}
 </body>
 </html>
