--- a/templates/base2.html
+++ b/templates/base2.html
@@ -6,27 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-  <title></title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <!-- pybo CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'pybo/style.css' %}">
+  <title>a</title>
 </head>
 <body>
-<!--내비게이션 바-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <a class="navbar-brand" href="#">Pybo</a>
-  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
-          data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">로그인</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 {% endblock %}
@@ -35,6 +21,8 @@
 <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
 <!-- Bootstrap JS-->
 <script src="{% static 'bootstrap.min.js' %}"></script>
+{% block script %}
+{% endblock %}
 
 </body>
 </html>
