--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 {% block content %}
 <div class="container my-3">
     <div class="row">
@@ -7,8 +7,9 @@
         </div>
 
     </div>
-    <form method="post" class="post-form" action="{% url 'login' %}">
-
+    <form method="post" class="post-form" action="{% url 'common:login' %}">
+        {% csrf_token %}
+        {% include "form_errors.html" %}
         <input type="hidden" name="next" value="{{ next }}">
 
         <div class="form-group">
@@ -24,7 +25,7 @@
         <button type="submit" class="btn btn-primary">로그인</button>
         <div class="col-8 text-right">
             <span>
-                <a href="{% url 'signup' %}">회원가입</a>
+                <a href="{% url 'common:signup' %}">회원가입</a>
             </span>
         </div>
 
