--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -6,12 +6,17 @@
 </head>
 <body>
 
+<!-- 추천탭 -->
 <div id="recommend" style="height:100px; background-color:yellow">
     <h3><a href="#">추천</a></h3>
 </div>
+
+<!-- 기록탭 -->
 <div id="record" style="height:100px; background-color:white">
     <h3><a href="#">기록하기</a></h3>
 </div>
+
+<!-- 기록 결과 탭-->
 <div id="check" style="height:100px; background-color:green">
     <h3><a href="#">기록보기</a></h3>
 </div>
