--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -13,19 +13,13 @@
 
 </head>
 <body>
-<div id="nav">{% include "navbar.html" %}</div>
+{% extends 'base.html' %}
+{% block content %}
+
 <div id="reco_header">{% include 'reco/reco_header.html' %}</div>
 <div id="reco_container">{% include 'reco/reco_container.html' %}</div>
 
-<!-- 기본 템플릿 안에 삽입될 내용 Start-->
-{% block content %}
-
 {% endblock %}
-<!-- 기본 템플릿 안에 삽입될 내용 End -->
-<!-- JQuery JS -->
-<script src="{% static 'jquery-3.7.0.min.js' %}"></script>
-<!-- Bootstrap JS -->
-<script src="{% static 'bootstrap.min.js' %}"></script>
 
 </body>
 </html>
