--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -8,10 +8,7 @@
 
 <!-- 추천 결과 출력 -->
 <div id="reco_result" style="text-align:center;">
-    <img src="https://blog.kakaocdn.net/dn/YZiGz/btqxdqHsg3G/TmrEpyujNbbtNtOsiFpkik/img.jpg"
-         width="200px" height="200px"><br>
-    <h4></h4>
-
+    <iframe src="../pybo/recommend_food.html" width="500" height="300" frameborder="0"></iframe>
 </div>
 
 
@@ -22,15 +19,12 @@
     <!-- 확인 버튼 -->
     <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
     border: none; cursor: pointer;" type="submit" id="submit">확인</button>
-    <br><br>
+
     <!-- 검색 버튼 ***수정필요***-->
-    <form action="/search" method="get">
-      <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    <!-- <form action="/search" method="get"> -->
+    <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
     border: none; cursor: pointer;" type="submit" id="search">검색</button>
-    </form>
-
-
-
+    <!-- </form> -->
 
 </div>
 
