--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -34,7 +34,7 @@
                 value="{{ form.nickname.value|default_if_none:'' }}">
             </div>
             <div class="form-group">
-                <label for="username">사용자 이름</label>
+                <label for="username">아이디</label>
                 <input type="text" class="form-control" name="username" id="username"
                 value="{{ form.username.value|default_if_none:'' }}">
             </div>
