--- a/templates/pybo/records_detail.html
+++ b/templates/pybo/records_detail.html
@@ -9,6 +9,11 @@
             </div>
             <div class="d-flex justify-content-end">
                 <div class="badge badge-light p-2">
+                    {% if records.rating %}
+                        <p>등록된 별점 {{ records.rating }}점</p>
+                    {% else %}
+                        <p>별점이 등록되지 않았습니다.</p>
+                    {% endif %}
                     {{ records.create_date }}
                 </div>
             </div>
@@ -22,13 +27,5 @@
                 <button type="submit" name="rating" value="{{ i }}" class="btn btn-primary mx-1">{{ i }}점</button>
             {% endfor %}
         </form>
-    </div>
-    <div class="text-center mt-3">
-        <h4>등록된 별점</h4>
-        {% if records.rating %}
-            <p>{{ records.rating }}점</p>
-        {% else %}
-            <p>별점이 등록되지 않았습니다.</p>
-        {% endif %}
     </div>
 </div>
