--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!-- 추천탭 -->
 <div id="recommend" style="height:100px; background-color:yellow">
-    <h3><a href="#">추천</a></h3>
+    <h3><a href="http://localhost:8000/recommend-food/">추천</a></h3>
 </div>
 
 <!-- 기록탭 -->
