--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -1,5 +1,20 @@
 {% extends "base2.html" %}
 {% block content %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+  <a class="navbar-brand" href="http://localhost:8000/">Pybo</a>
+  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+
+        <a class="nav-link" href="/common/login/">로그인</a>
+
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="container my-3">
     <div class="row">
         <div class="col-4">
