--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -3,6 +3,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+  <a class="navbar-brand" href="http://localhost:8000/">Pybo</a>
+  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+
+        <a class="nav-link" href="/common/login/">로그인</a>
+
+      </li>
+    </ul>
+  </div>
+</nav>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
@@ -24,6 +39,7 @@
 </head>
 <body>
     <div class="container">
+
         <h2 class="text-center mb-4">회원가입</h2>
         <form method="post" class="post-form" target="_blank">
             {% csrf_token %}
