--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <!-- 내비게이션 바-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <a class="navbar-brand" href="{% url 'index' %}">Pybo</a>
+  <a class="navbar-brand" href="http://localhost:8000/">Pybo</a>
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
           data-target="#navbarNav" aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
