기록하기 및 별점 기능 추가

--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -12,5 +12,5 @@
 <!-- 기록 결과 탭-->
 
 <div id="check" style="height:100px; background-color:green">
-    <h3><a href="records/">기록보기</a></h3>
+    <h3><a href="/pybo/records/">기록보기</a></h3>
 </div>
