--- a/templates/pybo/records_form.html
+++ b/templates/pybo/records_form.html
@@ -50,6 +50,10 @@
             {{ form.subject }}
         </div>
         <div class="form-group">
+            <label for="menu">메뉴</label>
+            <input type="text" id="menu" name="menu" value="{{ request.GET.menu }}" readonly>
+        </div>
+        <div class="form-group">
             <label for="{{ form.content.id_for_label }}">내용</label>
             {{ form.content }}
         </div>
