index bootstrap test..

--- a/templates/test/navbar2.html
+++ b/templates/test/navbar2.html
@@ -1,10 +1,10 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary" id="navbar1">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navbar1">
   <div class="container">
     <a class="navbar-brand mr-1 mb-1 mt-0" href="../">PyFood</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar" aria-expanded="true">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse justify-content-center collapse show" id="collapsingNavbar" style="">
+    <div class="navbar-collapse justify-content-center collapse" id="collapsingNavbar" style="">
       <ul class="navbar-nav">
         <li class="nav-item">
           {% if user.is_authenticated %}
