--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -6,7 +6,7 @@
 
 <!-- 기록탭 -->
 <div id="record" style="height:100px; background-color:white">
-    <h3><a href="#">기록하기</a></h3>
+    <h3><a href="{% url 'records_create' %}">기록하기</a></h3>
 </div>
 
 <!-- 기록 결과 탭-->
