--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -22,8 +22,8 @@
     border: none; cursor: pointer;">다시</a>
 
     <!-- 확인 버튼 -->
-    <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
-    border: none; cursor: pointer;" type="submit" id="submit">확인</button>
+    <a href="{% url 'records_create' %}" class="btn" style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    border: none; cursor: pointer;">확인</a>
 
     <!-- 검색 버튼 ***수정필요***-->
     <!-- <form action="/search" method="get"> -->
