--- a/templates/test/container2.html
+++ b/templates/test/container2.html
@@ -26,7 +26,7 @@
               </button>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">기록하기</a>
-                <a class="dropdown-item" href="#">조회하기</a>
+                <a class="dropdown-item" href="/pybo/records/">조회하기</a>
               </div>
             </div>
           </div>
