--- a/templates/test/navbar2.html
+++ b/templates/test/navbar2.html
@@ -26,10 +26,11 @@
             Recommends
           </a>
           <div class="dropdown-menu" aria-labelledby="recommendsDd">
+            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend/">전   체</a>
             <a class="dropdown-item px-2 " href="#">한   식</a>
             <a class="dropdown-item px-2 " href="#">중   식</a>
             <a class="dropdown-item px-2 " href="#">일   식</a>
-            <a class="dropdown-item px-2 " href="#">양    식</a>
+            <a class="dropdown-item px-2 " href="#">양   식</a>
             <a class="dropdown-item px-2 " href="#">디 저 트</a>
           </div>
         </li>
@@ -40,7 +41,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="recordsDd">
             <a class="dropdown-item px-2" href="#">기 록 하 기</a>
-            <a class="dropdown-item px-2" href="#">조 회 하 기</a>
+            <a class="dropdown-item px-2" href="/pybo/records/">조 회 하 기</a>
           </div>
         </li>
         <li class="nav-item">
