index bootstrap test

--- a/templates/test/navbar2.html
+++ b/templates/test/navbar2.html
@@ -40,7 +40,7 @@
             Records
           </a>
           <div class="dropdown-menu" aria-labelledby="recordsDd">
-            <a class="dropdown-item px-2" href="#">기 록 하 기</a>
+            <a class="dropdown-item px-2" href="{% url 'records_create' %}">기 록 하 기</a>
             <a class="dropdown-item px-2" href="/pybo/records/">조 회 하 기</a>
           </div>
         </li>
