--- a/templates/test/base22.html
+++ b/templates/test/base22.html
@@ -13,7 +13,7 @@
     <link href="./template.css" rel="stylesheet">
   <style>
       header {
-          background-image: url('https://i.pinimg.com/564x/24/0f/fc/240ffc62cdc43db78256b622cd601a03.jpg');
+          background-image: url('https://media.licdn.com/dms/image/C4D1BAQHzjTG2Kd0Oeg/company-background_10000/0/1579165766978?e=1688450400&v=beta&t=rJ6w5uGbUzfEZffDvR41BkI4Bh_DKsYtWZfU72crbko');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center top;
