--- a/templates/test/container2.html
+++ b/templates/test/container2.html
@@ -25,7 +25,7 @@
                 <span class="sr-only">Downloads</span>
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">기록하기</a>
+                <a class="dropdown-item" href="{% url 'records_create' %}">기록하기</a>
                 <a class="dropdown-item" href="/pybo/records/">조회하기</a>
               </div>
             </div>
