index bootstrap test

--- a/templates/test/base22.html
+++ b/templates/test/base22.html
@@ -17,6 +17,7 @@
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center top;
+          background-color: rgba(0, 0, 0, 0);
       }
   </style><style>.copyable{position:relative}.copyable .copyable-trigger{color:#333;background-color:rgba(255,255,255,.8);border:1px #888 solid;border-radius:4px;position:absolute;padding:3px 6px;top:0;right:0;z-index:102;text-decoration:none;font-family:monospace;font-size:11px;cursor:pointer;display:none}.copyable:hover .copyable-trigger{display:inline-block}</style>
 </head>
