--- a/templates/test/container2.html
+++ b/templates/test/container2.html
@@ -6,7 +6,7 @@
       <div class="col-12">
         <div class="text-center m-0 vh-100 d-flex flex-column justify-content-center text-light">
           <h1 class="display-4"><b>Choose Your Menu!</b></h1>
-          <p class="lead">문구를 정해야 해요 ㅠ ㅠ </p>
+          <p class="lead">오늘은 이거 어때? </p>
 
           <div class="mt-2 mx-auto">
             <div class="btn-group">
