--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -85,7 +85,7 @@ function displayMarker(place) {
         position: new kakao.maps.LatLng(place.y, place.x)
     });
 
-    // 마커에 클릭이벤트를 등록합니다
+    // 마커에 클릭이벤트를 등록합니다.
     kakao.maps.event.addListener(marker, 'click', function() {
         // 마커를 클릭하면 장소명이 인포윈도우에 표출됩니다
         infowindow.setContent('<div style="padding:5px;font-size:12px;">' + place.place_name + '</div>');
