--- a/templates/pybo/records_form.html
+++ b/templates/pybo/records_form.html
@@ -50,8 +50,11 @@
             {{ form.subject }}
         </div>
         <div class="form-group">
+            <label for="menu">카테고리</label>
+            <!--<input type="text" id="name" name="name" value="{{ request.GET.food_menu }}" readonly>-->
+            <input type="text" name="food_name" value="{{ request.GET.food_name }}"><br>
             <label for="menu">메뉴</label>
-            <input type="text" id="menu" name="menu" value="{{ request.GET.menu }}" readonly>
+            <input type="text" name="food_menu" value="{{ request.GET.food_menu }}">
         </div>
         <div class="form-group">
             <label for="{{ form.content.id_for_label }}">내용</label>
