--- a/templates/pybo/records_form.html
+++ b/templates/pybo/records_form.html
@@ -1,60 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-{% load static %}
-<style>
-    .star-rating {
-        display: inline-block;
-        unicode-bidi: bidi-override;
-        direction: rtl;
-    }
 
-    .star-rating input[type="radio"] {
-        display: none;
-    }
-
-    .star-rating label {
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url('{% static 'star-empty.png' %}'); /* 빈 별 이미지 경로로 대체해야 함 */
-        background-size: cover;
-        cursor: pointer;
-    }
-
-    .star-rating input[type="radio"]:checked ~ label {
-        background-image: url('{% static 'star-filled.png' %}'); /* 채워진 별 이미지 경로로 대체해야 함 */
-    }
-
-    .star-filled {
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url('{% static 'star-filled.png' %}'); /* 채워진 별 이미지 경로로 대체해야 함 */
-        background-size: cover;
-    }
-
-    .star-empty {
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url('{% static 'star-empty.png' %}'); /* 빈 별 이미지 경로로 대체해야 함 */
-        background-size: cover;
-    }
-</style>
 <div class="container">
     <h5 class="my-3 border-bottom pb-2">글쓰기</h5>
     <form method="post" class="post-form my-3" >
         {% csrf_token %}
         <div class="form-group">
-            <label for="{{ form.subject.id_for_label }}">제목</label>
-            {{ form.subject }}
+            {% if form.food_name.value %}
+                <p>음식 분류 : {{ form.food_name }}</p>
+            {% else %}
+                <p>음식 분류 : {{ request.GET.food_name }}</p>
+            {% endif %}
+            {% if form.menu.value %}
+                <p>음식 분류 : {{ form.menu }}</p>
+            {% else %}
+                <p>음식 메뉴 : {{ request.GET.food_menu }}</p>
+            {% endif %}
         </div>
         <div class="form-group">
-            <label for="menu">카테고리</label>
-            <!--<input type="text" id="name" name="name" value="{{ request.GET.food_menu }}" readonly>-->
-            <input type="text" name="food_name" value="{{ request.GET.food_name }}"><br>
-            <label for="menu">메뉴</label>
-            <input type="text" name="food_menu" value="{{ request.GET.food_menu }}">
+            <label for="{{ form.subject.id_for_label }}">제목</label>
+            {{ form.subject }}
         </div>
         <div class="form-group">
             <label for="{{ form.content.id_for_label }}">내용</label>
