--- a/templates/pybo/records_list.html
+++ b/templates/pybo/records_list.html
@@ -1,47 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-<style>
-    .star-rating {
-        display: inline-block;
-        unicode-bidi: bidi-override;
-        direction: rtl;
-    }
 
-    .star-rating input[type="radio"] {
-        display: none;
-    }
-
-    .star-rating label {
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url('{% static 'star-empty.png' %}'); /* 빈 별 이미지 경로로 대체해야 함 */
-        background-size: cover;
-        cursor: pointer;
-    }
-
-    .star-rating input[type="radio"]:checked ~ label {
-        background-image: url('{% static 'star-filled.png' %}'); /* 채워진 별 이미지 경로로 대체해야 함 */
-    }
-
-    .star-filled {
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url('{% static 'star-filled.png' %}'); /* 채워진 별 이미지 경로로 대체해야 함 */
-        background-size: cover;
-    }
-
-    .star-empty {
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url('{% static 'star-empty.png' %}'); /* 빈 별 이미지 경로로 대체해야 함 */
-        background-size: cover;
-    }
-</style>
 <div class="container my-3">
     <table class="table">
         <thead>
@@ -77,7 +36,7 @@
                         </div>
                     </td>
                     <td>{{ records.author.username }}</td>
-                    <td>{{ records.create_date }}</td>
+                    <td>{{ records.modify_date|default:records.create_date }}</td>
                 </tr>
                 {% endfor %}
             {% else %}
