배경이미지 변경

--- a/templates/test/base22.html
+++ b/templates/test/base22.html
@@ -14,7 +14,7 @@
 
      <style>
       header {
-          background-image: url('https://media.licdn.com/dms/image/C4D1BAQHzjTG2Kd0Oeg/company-background_10000/0/1579165766978?e=1688450400&v=beta&t=rJ6w5uGbUzfEZffDvR41BkI4Bh_DKsYtWZfU72crbko');
+          background-image: url('https://ifh.cc/g/4D9ZQX.jpg');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center top;
