내비, 인덱스 변경

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,20 +2,32 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PyFood</title>
+    <meta name="description" content="Tequila is a free, open source Bootstrap 4 theme">
+    <meta name="generator" content="Themestr.app">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/3.0.0/css/ionicons.css" rel="stylesheet">
+    <link href="./theme.css" rel="stylesheet">
+    <link href="./template.css" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <!-- pybo CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <title>Title</title>
+     <style>
+      header {
+          background-image: url('https://ifh.cc/g/4D9ZQX.jpg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center top;
+      }
+      </style>
+      <style>.copyable{position:relative}.copyable .copyable-trigger{color:#333;background-color:rgba(255,255,255,.5);border:1px #888 solid;border-radius:4px;position:absolute;padding:3px 6px;top:0;right:0;z-index:102;text-decoration:none;font-family:monospace;font-size:11px;cursor:pointer;display:none}.copyable:hover .copyable-trigger{display:inline-block}
+      </style>
 
 
 </head>
 <body>
 
-<div id="nav">{% include "navbar.html" %}</div>
+<div id="nav">{% include "test/navbar2.html" %}</div>
 
 <!-- 기본 템플릿 안에 삽입될 내용 Start-->
 {% block content %}
@@ -26,9 +38,14 @@
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 <!-- JQuery JS -->
-<script src="{% static 'jquery-3.7.0.min.js' %}"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="scripts.js"></script>
+
 <!-- Bootstrap JS -->
-<script src="{% static 'bootstrap.min.js' %}"></script>
+
 {% block script %}
 {% endblock %}
 </body>
