--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,22 +1,62 @@
-<!-- 내비게이션 바-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <a class="navbar-brand" href="http://localhost:8000/">Pybo</a>
-  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
-          data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        {% if user.is_authenticated %}
-        <a class="nav-link" href="{% url 'common:logout' %}">
-          {{ user.username }} (로그아웃)
-        </a>
-        {% else %}
-        <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
-        {% endif %}
-      </li>
-    </ul>
+<!--내비게이션 바 -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!--<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navbar1">-->
+  <div class="container">
+    <a class="navbar-brand mr-1 mb-1 mt-0" href="http://localhost:8000/">PyFood</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar" aria-expanded="false">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse justify-content-center collapse" id="collapsingNavbar" style="">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          {% if user.is_authenticated %}
+          <a class="nav-link" href="{% url 'common:logout' %}">
+            {{ user.username }} (로그아웃)
+          </a>
+          {% else %}
+          <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+          {% endif %}
+        </li>
+      </ul>
+
+      <ul class="navbar-nav">
+
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="recommendsDd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Recommends
+          </a>
+          <div class="dropdown-menu" aria-labelledby="recommendsDd">
+            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend/">전   체</a>
+            <a class="dropdown-item px-2 " href="#">한   식</a>
+            <a class="dropdown-item px-2 " href="#">중   식</a>
+            <a class="dropdown-item px-2 " href="#">일   식</a>
+            <a class="dropdown-item px-2 " href="#">양   식</a>
+            <a class="dropdown-item px-2 " href="#">디 저 트</a>
+          </div>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="recordsDd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Records
+          </a>
+          <div class="dropdown-menu" aria-labelledby="recordsDd">
+            <a class="dropdown-item px-2" href="{% url 'records_create' %}">기 록 하 기</a>
+            <a class="dropdown-item px-2" href="/pybo/records/">조 회 하 기</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">3</a>
+        </li>
+
+      </ul>
+    </div>
   </div>
 </nav>
