--- a/templates/test/navbar2.html
+++ b/templates/test/navbar2.html
@@ -1,8 +1,8 @@
 <!--내비게이션 바 -->
-
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navbar1">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
+<!--<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navbar1">-->
   <div class="container">
-    <a class="navbar-brand mr-1 mb-1 mt-0" href="http://localhost:8000/test/">PyFood</a>
+    <a class="navbar-brand mr-1 mb-1 mt-0" href="http://localhost:8000/">PyFood</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
