--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -43,13 +43,13 @@
     border: none; cursor: pointer;">다시</a> -->
 
     <!-- 확인 버튼 -->
-    <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food_type }}&food_name={{ food_name }}" class="btn" style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food_type }}&food_name={{ food_name }}" class="btn" style="background-color: gray; color: white; padding: 10px 20px;
         border: none; cursor: pointer;">확인</a>
 
 
     <!-- 검색 버튼 -->
 
-    <button style="background-color: #4CAF50; color: white; padding: 10px 20px;
+    <button style="background-color: gray; color: white; padding: 10px 20px;
     border: none; cursor: pointer;" type="submit" id="search">검색</button>
         </form>
         </div>
