--- a/templates/pybo/records_form.html
+++ b/templates/pybo/records_form.html
@@ -34,7 +34,7 @@
                 {% endfor %}
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">등록하기</button>
+        <button type="submit" class="btn btn-secondary">등록하기</button>
     </form>
 </div>
 {% endblock %}
