조회수, 검색, 정렬 기능 추가

--- a/templates/pybo/records_detail.html
+++ b/templates/pybo/records_detail.html
@@ -26,7 +26,7 @@
                     {{ records.modify_date|default:records.create_date }}
                 </div>
             </div>
-        </div>
+        </div>ㅊㅊ
     </div>
     <div class="text-center">
         <h4>별점 등록하기</h4>
